[package]
name = "podstakannik"
description = "A friend for your tea time"
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"
homepage = "https://gitlab.com/grauwoelfchen/podstakannik"
readme = "README.rst"
keywords = ["cli", "text"]
categories = ["command-line-utilities", "text-processing"]
documentation = "https://docs.rs/crate/podstakannik"
repository = "https://gitlab.com/grauwoelfchen/podstakannik"
license = "GPL-3.0-or-later"
autobins = false

exclude = [
  ".cargo-huskey/*",
  "Makefile",
  "/.clippy.toml",
  "/.rustfmt.toml",
]

[badges]
gitlab = { repository = "grauwoelfchen/podstakannik", branch = "trunk" }

[[bin]]
name = "podstakannik"
doc = false
path = "src/main.rs"

[[test]]
name = "integration"
path = "test/test.rs"

[dependencies]
clap = "3.0.0-beta.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
panic = "abort"
