[package]
name = "podstakannik"
description = """\
This is a file/directory daemon watches personal diary posts on a local
filesystem
"""
version = "0.0.2"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"
homepage = "https://gitlab.com/grauwoelfchen/podstakannik"
readme = "README.md"
keywords = ["cli", "text"]
categories = ["command-line-utilities", "text-processing"]
documentation = "https://docs.rs/crate/podstakannik"
repository = "https://gitlab.com/grauwoelfchen/podstakannik"
license = "GPL-3.0-or-later"

autobins = false

exclude = [
  ".cargo-huskey",
  ".tool",
  "test",
  ".clippy.toml",
  ".rustfmt.toml",
  ".gitignore",
  ".gitlab-ci.yml",
  "Makefile",
  "rust-toolchain",
]

[badges]
gitlab = { repository = "grauwoelfchen/podstakannik", branch = "trunk" }

[[bin]]
name = "podstakannik"
doc = false
path = "src/main.rs"

[[test]]
name = "integration"
path = "test/test.rs"

[dependencies]
clap = "3.0.0-beta.2"
notify = "4.0.12"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
panic = "abort"
